2011-11-05  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: remove redundant settings of `errexit' shell flag
	* tests/aclocal-path-install-serial.test: Do not set the
	`errexit' shell flag, as it is already set by `tests/defs'.
	* tests/ar-lib2.test: Likewise.
	* tests/ar-lib3.test: Likewise.
	* tests/ar-lib4.test: Likewise.
	* tests/ar-lib5a.test: Likewise.
	* tests/ar-lib5b.test: Likewise.
	* tests/ar-lib6a.test: Likewise.
	* tests/ar-lib6b.test: Likewise.
	* tests/ar-lib7.test: Likewise.
	* tests/ar3.test: Likewise.
	* tests/ar4.test: Likewise.
	* tests/ar5.test: Likewise.
	* tests/extra-portability.test: Likewise.
	* tests/extra-portability2.test: Likewise.
	* tests/extra-portability3.test: Likewise.
	* tests/install-info-dir.test: Likewise.
	* tests/maintmode-configure-msg.test: Likewise.

2011-11-05  Stefano Lattarini  <stefano.lattarini@gmail.com>

	generated tests: avoid extra "FIXME" comments
	* tests/gen-testsuite-part: Avoid putting too much "FIXME"
	comments in the generated test scripts, since they end up
	being just counter-productive noise when one has to grep
	the test scripts looking for real "FIXME" items.

2011-09-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: fix typo in 'prove-runner' script
	* tests/prove-runner: Remove erroneously-repeated word.
	* THANKS: Update.
	Reported by Dave Hart.

2011-11-05  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Merge branch 'master' into testsuite-work
	* tests/extra-portability.test: Use `$am_original_AUTOMAKE'
	instead of the obsolete `$original_AUTOMAKE'.
	* tests/extra-portability3.test: Likewise.
	* tests/list-of-tests.mk: Update.

2011-11-05  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Merge branch 'msvc' into master
	* tests/extra-portability3.test: Use `$original_AUTOMAKE' instead
	of hackishly extracting the first component of `$AUTOMAKE'.
	* tests/extra-portability.test: Likewise.  Also, since we are at