@@ -50,9 +50,7 @@ int wish(void) { return 0; }
 END
 
 mkdir auxdir
-# FIXME: make this "installcheck-aware" once we are merged into the
-#        'testsuite-work' branch.
-cat - "$testsrcdir"/../lib/ar-lib > auxdir/ar-lib << 'END'
+cat - "$am_scriptdir/ar-lib" > auxdir/ar-lib << 'END'
 #! /bin/sh
 :> ar-lib-worked
 END
