@@ -78,8 +78,7 @@ cat > extra-checks.am << 'END'
 extra_checks = maude-src maude-dist liver-not-dist
 END
 
-# FIXME: improve support for "installcheck" here.
-cp "$top_testsrcdir/lib/ar-lib" . || Exit 99
+cp "$am_scriptdir/ar-lib" . || fatal_ "fetching auxiliary script \`ar-lib'"
 
 $ACLOCAL
 $AUTOCONF
