@@ -53,8 +53,7 @@ cat > libobj-dir/foobar.c << 'END'
 extern int dummy;
 END
 
-# FIXME: improve support for "installcheck" here.
-cp "$top_testsrcdir/lib/ar-lib" . || Exit 99
+cp "$am_scriptdir/ar-lib" . || fatal_ "fetching auxiliary script \`ar-lib'"
 
 $ACLOCAL
 $AUTOCONF
