@@ -46,9 +46,8 @@ END
 
 : > ltmain.sh
 
-# FIXME: better support for installcheck.
 for auxscript in ar-lib config.guess config.sub; do
-  cp "$top_testsrcdir/lib/$auxscript" . \
+  cp "$am_scriptdir/$auxscript" . \
     || fatal_ "fetching auxiliary script \`$auxscript'"
 done
 
