@@ -1,5 +1,16 @@
 2011-11-05  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: more faithful 'installcheck' support in few tests
+	* tests/ar-lib5a.test: Use the `$am_scriptdir' variable instead
+	of "$testsrcdir/../lib" or "$top_testsrcdir/lib", to test more
+	faithfully under "make installcheck".
+	* tests/ar-lib5a.test: Likewise.
+	* tests/libobj-basic.test: Likewise.
+	* tests/libobj19.test: Likewise.
+	* tests/suffix5.test: Likewise.
+
+2011-11-05  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests: remove redundant settings of `errexit' shell flag
 	* tests/aclocal-path-install-serial.test: Do not set the
 	`errexit' shell flag, as it is already set by `tests/defs'.
